# colorid-wasm

./: .gitignore  Cargo.toml  README.md  package.json  rollup.config.js  tsconfig.types.json
.github/workflows/: ci.yml
benchmarks/: benchmark.js
colorid/: Cargo.toml
colorid-wasm/: Cargo.toml  README.md
colorid-wasm/src/: lib.rs
colorid-wasm/tests/: web.rs
colorid/benches/: color_benchmark.rs
colorid/examples/: base.rs
colorid/src/: hex.rs  lib.rs  rng.rs
cypress-bench/: colorid-wasm.html  crypto-randomUUID.html  nanoid.html  uuid-v4.html
cypress/e2e/: benchmark.cy.js
examples/colors/: colors.example.js
examples/id/: id.example.js
src/: browser.ts  colorid.ts  format.ts
src/rng/: browser.ts  index.ts  pool.ts
test/: test.js
