[package]
name = "colorid"
version = "0.0.0"
license = "MIT"
description = "The unique 4-colors-ID string generator in Rust lang"
edition = "2021"
authors = ["RustQ"]
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md", "benches", "examples"]
homepage = "https://github.com/rustq/colorid"
documentation = "https://docs.rs/colorid"
readme = "README.md"
keywords = ["colorid", "color", "id", "random"]
repository = "https://github.com/rustq/colorid.git"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
once_cell = "1.12.0"

[dev-dependencies]
criterion = "0.4.0"
nanoid = "0.4.0"

[dev-dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "rng"
]

[[bench]]
name = "color_benchmark"
harness = false